revamp email logic
